src/main/resources/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: moneyway-service
spec:
  selector:
    app: moneyway-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: moneyway-service
spec:
  selector:
    matchLabels:
      app: moneyway-service
  replicas: 1
  template:
    metadata:
      labels:
        app: moneyway-service
    spec:
      containers:
        - name: moneyway-service
          image: danidepp/moneyway:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
