src/main/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
spec:
  rules:
    - host: "bet.io"
      http:
        paths:
          - pathType: Prefix
            path: "/moneyway"
            backend:
              service:
                name: moneyway-service
                port:
                  number: 80
